; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/intelfb/extr_intelfb_i2c.c_intelfb_gpio_getscl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/intelfb/extr_intelfb_i2c.c_intelfb_gpio_getscl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intelfb_i2c_chan = type { i32, %struct.intelfb_info* }
%struct.intelfb_info = type { i32 }

@SCL_DIR_MASK = common dso_local global i32 0, align 4
@SCL_VAL_IN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @intelfb_gpio_getscl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intelfb_gpio_getscl(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.intelfb_i2c_chan*, align 8
  %4 = alloca %struct.intelfb_info*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.intelfb_i2c_chan*
  store %struct.intelfb_i2c_chan* %7, %struct.intelfb_i2c_chan** %3, align 8
  %8 = load %struct.intelfb_i2c_chan*, %struct.intelfb_i2c_chan** %3, align 8
  %9 = getelementptr inbounds %struct.intelfb_i2c_chan, %struct.intelfb_i2c_chan* %8, i32 0, i32 1
  %10 = load %struct.intelfb_info*, %struct.intelfb_info** %9, align 8
  store %struct.intelfb_info* %10, %struct.intelfb_info** %4, align 8
  %11 = load %struct.intelfb_i2c_chan*, %struct.intelfb_i2c_chan** %3, align 8
  %12 = getelementptr inbounds %struct.intelfb_i2c_chan, %struct.intelfb_i2c_chan* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @SCL_DIR_MASK, align 4
  %15 = call i32 @OUTREG(i32 %13, i32 %14)
  %16 = load %struct.intelfb_i2c_chan*, %struct.intelfb_i2c_chan** %3, align 8
  %17 = getelementptr inbounds %struct.intelfb_i2c_chan, %struct.intelfb_i2c_chan* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @OUTREG(i32 %18, i32 0)
  %20 = load %struct.intelfb_i2c_chan*, %struct.intelfb_i2c_chan** %3, align 8
  %21 = getelementptr inbounds %struct.intelfb_i2c_chan, %struct.intelfb_i2c_chan* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @INREG(i32 %22)
  store i32 %23, i32* %5, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* @SCL_VAL_IN, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  %28 = zext i1 %27 to i32
  ret i32 %28
}

declare dso_local i32 @OUTREG(i32, i32) #1

declare dso_local i32 @INREG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
